# ascii-serial-com

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  Pipfile  README.md  build.py  flags.mk  make.py
arduino_integration_tests/: testLoopback.py  test_loopback.py  test_registers.py  test_rx.py
doc/: Doxyfile  Makefile  architecture.tex  customdocclass.cls  dataformat.tex
integration_tests/: testLoopback.py  testRegDev.py
nucleo-f091rc_integration_tests/: README.md  test_loopback.py  test_rx.py
python/: .gitignore  ascii-serial-com.py  asciiSerialCom.py  circularBuffer.py  echo-client.py  echo-server.py  script.py  script2.py  setup.cfg  setup.py  testcrc.py
python/asciiserialcom/: ascErrors.py  ascHelpers.py  ascMessage.py  asciiSerialCom.py  asciiSerialComLowLevel.py  asciiSerialComShell.py  asyncSubprocCom.py  base.py  circularBuffer.py  cli.py  comSubproc.py  device.py  errors.py  helpers.py  host.py  message.py  shell.py  tty_utils.py  utilities.py
python/asciiserialcom/cli/: messaging.py
python/tests/: __init__.py  testAscHelpers.py  testAscMessage.py  testAsciiSerialCom.py  testAsyncSubprocCom.py  testCircularBuffer.py  testComSubproc.py  testIntegration.py  test_asciiSerialCom.py  test_base.py  test_cli.py  test_helpers.py  test_host.py  test_integration.py  test_message.py
src/: .gitignore  Makefile  asc_exception.h  ascii_serial_com.c  ascii_serial_com.h  ascii_serial_com_device.c  ascii_serial_com_device.h  ascii_serial_com_dummy_loopback_device.c  ascii_serial_com_register_block.c  ascii_serial_com_register_block.h  circular_buffer.c  (+19 more)
(+56 files in other folders)
