[metadata]
name=asciiserialcom
description=ASCII-Serial-Com
long_description = Python interface to ASCII-Serial-Com, a human readable serial communication protocol.
author=Justin Hugon
author_email=opensource AT hugonweb.com
version=1.0.0b2
license=GPLv3
classifiers=
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages =
    asciiserialcom
install_requires =
    crcmod~=1.7
    trio~=0.19.0
    trio-typing~=0.5.1

[options.entry_points]
console_scripts =
    asciiSerialComShell=asciiserialcom.shell:main
    asciiSerialComDevice=asciiserialcom.device:main
